--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "nodemon server.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"populate": "utilities/populate.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -15,6 +16,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"fetch": "^1.1.0",
+		"isomorphic-fetch": "^3.0.0",
 		"mongoose": "^6.9.1",
 		"node-fetch": "^3.3.0",
 		"request": "^2.88.2"
