--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"fetch": "^1.1.0",
+		"isomorphic-fetch": "^3.0.0",
 		"mongoose": "^6.9.1",
 		"node-fetch": "^3.3.0",
 		"qs": "^6.11.0",
