--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
 		"mongoose": "^6.9.1",
 		"node-fetch": "^3.3.0",
 		"qs": "^6.11.0",
+		"redis": "^4.6.4",
 		"request": "^2.88.2"
 	},
 	"devDependencies": {
